--- a/ProjectBuilder/app/src/main/res/values/strings.xml
+++ b/ProjectBuilder/app/src/main/res/values/strings.xml
@@ -21,4 +21,12 @@
         completions."
     </string>
     <string name="title_activity_main">Main</string>
+    <string name="title_activity_sdfs">sdfs</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_project_main">ProjectMain</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
