--- a/ProjectBuilder/app/src/main/res/values/strings.xml
+++ b/ProjectBuilder/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">ProjectBuilder</string>
+    <string name="project"></string>
+    <string name="task"></string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
@@ -29,4 +31,5 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_task_info">TaskInfo</string>
 </resources>
